# generic-data-th

./: LICENSE  cabal.project  generic-data-th.cabal
.github/workflows/: haskell-ci.yml
src/Generic/Data/: TH.hs
src/Generic/Data/Internal/: TH.hs
test/: test.hs
