name:                generic-data-th
version:             0.1.0.0
synopsis:            Generate type declarations from a GHC Generic Rep
description:
  See README.
homepage:            https://github.com/Lysxia/generic-data-th#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
copyright:           2025 Li-yao Xia
category:            Generics
build-type:          Simple
extra-doc-files:  README.md, CHANGELOG.md
cabal-version:       2.0
tested-with:         GHC == 9.2.8, GHC == 9.6.7, GHC == 9.12.2

library
  hs-source-dirs:      src
  exposed-modules:
    Generic.Data.TH
    Generic.Data.Internal.TH
  build-depends:
    lift-type >= 0.1.2 && < 0.2,
    template-haskell < 2.24,
    base >= 4.16 && < 4.22
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite gdt-test
  hs-source-dirs: test
  main-is: test.hs
  build-depends:
    tasty,
    tasty-hunit,
    generic-data,
    generic-data-th,
    base
  ghc-options: -Wall
  default-language: Haskell2010
  type: exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/Lysxia/generic-data-th
